'prevent data table and desc expand arrows from being clipped when container is narrow'
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EbrcWebsiteCommon/trunk@87175 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -167,7 +167,7 @@ td.wdk-DataTableCell__thumbnail {
 .eupathdb-DatasetGraphContainer {
   overflow: auto;
   position: relative;
-  padding: 0 4px;
+  padding: 0 1rem;
   min-height: 100px;
   display: flex;
   flex-wrap: wrap;
